# terminal-budget-tracker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  checkpointRM.md
include/: BudgetTracker.h
lib/: CMakeLists.txt
lib/db/: CRUD.cpp  CRUD.h  database.db  schema.sql  seed.cpp  seed.sql
lib/include/: BudgetTracker.h  CommandProcessor.h  DB.h  FinancialEntity.h  Transaction.h
lib/src/: BudgetTracker.cpp  CommandProcessor.cpp  main.cpp
src/: BudgetTracker.cpp  FinancialEntity.cpp  Transaction.cpp
